# toynn

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  main_benchmarks.cpp
cmake/: .gitkeep
include/core/: tensor.h
include/ops/: add.h
src/: CMakeLists.txt
src/core/: tensor.cpp
src/ops/: add.cpp
tests/: CMakeLists.txt  main_tests.cpp  tensor_test.cpp
tools/: CMakeLists.txt  add_tool.cpp
